update footer to fix tell us ask us position - align center

--- a/src/assets/scss/_alwstyle.scss
+++ b/src/assets/scss/_alwstyle.scss
@@ -253,7 +253,7 @@ background-color:$black;
     height: auto;
   }
   .fdll img{
-    width:50px;
+    width:30px;
     height:auto;
   }
 }
